--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     text-transform: uppercase;
     letter-spacing: .5em;
     top: 15%;
-	background: linear-gradient(to right, yellow , white); /*Standard syntax */
+	background: linear-gradient(to right, rgb(106, 49, 238) , white); /*Standard syntax */
 }
 
 h1 {
